<resources>
    <string name="app_name">Grouppii</string>
    <string name="valid_name">Please write your name</string>
    <string name="valid_email">Please write a valid email or phone address</string>
    <string name="password_validation">Password should be six characters long</string>
    <string name="password_should_be_six">Your password must be 8–16 characters, and include at least one lowercase letter, one uppercase letter, and one number and one special character.</string>
    <string name="password_dont_match_validation">Password doesn\'t match</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="plesase_write_your_name">Please write your name</string>
    <string name="plesase_write_participant_name">Please write participant name</string>

    <string name="please_write_your_phone_number">Please write valid phone number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="admin_can_edit_trip_settings">Only admin can edit trip settings</string>
    <string name="only_admin_can_cancell_the_trip">only admin can cancell the trip</string>

    <string name="default_notification_channel_id">default_notification_channel_id</string>

    <string name="plesase_write_your_confirmation">Please write your confirmation number</string>

    <string name="plesase_write_your_title">Please write your title</string>
    <string name="plesase_write_your_description">Please write your description</string>
    <string name="plesase_write_your_location">Please write your valid location</string>
    <string name="plesase_write_start_date">Please write start date</string>
    <string name="plesase_write_end_date">Please write end date</string>
    <string name="plesase_write_payment_amount">Please write payment amount</string>
    <string name="plesase_write_date">Please write date</string>
    <string name="plesase_write_pay_date">Please write pay by date</string>
    <string name="group_view"><u>Group View</u></string>
    <string name="reserves">Rsvp</string>


    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>
    <string name="cover_image">Cover Image</string>

    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>
    <string name="user_action_typing">is typing...</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="choose_photo">Choose Photo</string>

    <!--  Delivery status  -->
    <string name="sending">Sending</string>
    <string name="sent">Sent</string>
    <string name="seen">Seen</string>
    <string name="error">Error</string>
    <string name="choose">Choose one</string>
    <string name="incorrect_password_email">incorrect email or password</string>

    <string name="incorrect_current_password">incorrect current password</string>

    <string name="pin">******</string>
    <string name="correct_number">Is this your correct Number?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="edit_participant">Edit Participant</string>
    <string name="rsvp">Rsvp</string>
    <string name="days_plan">Days Plan</string>
    <string name="payments">Payments</string>
    <string name="photos">Photos</string>
    <string name="dosnotsharecost">Don\'t Share Costs</string>
    <string name="not_registered_user">Not registered user</string>
    <string name="personal">Personal</string>
    <string name="group">Group</string>


</resources>