<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColor"
    tools:context=".ui.activity.tripDetailScreen.TripDetailScreenActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image_thumbnail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivTripImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/shadow_top"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/fourty_dp"
        android:layout_height="@dimen/fourty_dp"
        android:layout_marginLeft="@dimen/widget_margin_left_right"
        android:layout_marginTop="@dimen/widget_margin_left_right"
        android:src="@mipmap/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvTripTypeName"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fifty_dp"
        android:layout_marginTop="@dimen/widget_margin_left_right"
        android:gravity="center_vertical"
        android:text="Active Trip"
        android:textColor="@android:color/white"
        android:textSize="@dimen/main_heading_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ivChat"
        android:layout_width="@dimen/fourty_dp"
        android:layout_height="@dimen/fourty_dp"
        android:layout_marginTop="@dimen/widget_margin_left_right"
        android:layout_marginRight="@dimen/widget_margin"
        android:src="@mipmap/chat_white"
        app:layout_constraintRight_toLeftOf="@id/ivMenu"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivMenu"
        android:layout_width="@dimen/fourty_dp"
        android:layout_height="@dimen/fourty_dp"
        android:layout_marginTop="@dimen/widget_margin_left_right"
        android:layout_marginEnd="@dimen/widget_margin_left_right"
        android:src="@mipmap/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@mipmap/shadow"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/tvTripTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/widget_margin_left_right"
            android:layout_marginRight="@dimen/fifty_dp"
            android:layout_marginBottom="@dimen/widget_margin_left_right"
            android:text="Best Dubai Adventure Holiday Trip 15 days."
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvDescription"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/widget_margin_left_right"
            android:layout_marginBottom="@dimen/widget_margin_left_right"
            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvLocation"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/widget_margin_left_right"
            android:layout_marginBottom="@dimen/widget_margin_left_right"
            android:drawableLeft="@mipmap/trip_white"
            android:drawablePadding="18dp"
            android:text="Dubai United Arab Emirates"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/tvDaysLeft"
            android:layout_marginRight="120dp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvDaysLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/widget_margin_left_right"
            android:layout_marginBottom="@dimen/widget_margin"
            android:drawableLeft="@mipmap/payment_white"
            android:drawablePadding="@dimen/widget_margin"
            android:text="10 day left"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/cvMenu"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tvGroupView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/widget_margin_left_right"
            android:layout_marginBottom="@dimen/widget_margin_left_right"
            android:text="@string/group_view"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvDaysLeft"
            app:layout_constraintEnd_toEndOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rlImages"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/widget_margin_left_right"
            android:layout_marginTop="@dimen/widget_margin_left_right"
            android:layout_marginRight="@dimen/widget_margin_left_right"
            android:layout_marginBottom="@dimen/widget_margin_left_right"
            app:layout_constraintBottom_toTopOf="@id/cvMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGroupView">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--
                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/cvMenu"
                    android:layout_width="match_parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    android:layout_height="wrap_content"
                    card_view:cardBackgroundColor="@color/transparent_color"
                    card_view:cardElevation="10dp"
                    card_view:cardCornerRadius="10dp"
                    android:layout_marginRight="@dimen/widget_margin_left_right"
                    android:layout_marginLeft="@dimen/widget_margin_left_right"
                    android:layout_marginBottom="@dimen/fifty_dp">-->


        <LinearLayout
            android:id="@+id/cvMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/widget_margin_left_right"
            android:layout_marginRight="@dimen/widget_margin_left_right"
            android:layout_marginBottom="@dimen/fifty_dp"
            android:background="@drawable/round_card_transparent_bg"
            android:elevation="@dimen/widget_margin"
            android:orientation="vertical"
            android:outlineProvider="background"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/widget_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:id="@+id/llDayPlan"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/days_plan_white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/days_plan"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llReservs"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/reservs_white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/rsvp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPayment"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/payment_white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/payments"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPhoto"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/photos_white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/photos"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size14sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <!--        </androidx.cardview.widget.CardView>-->


        <ImageView
            android:id="@+id/ivMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_expand_less_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvMenu" />

        <TextView
            android:id="@+id/tvMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_expand_less_24"
            android:text="More Details"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivMore" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Animation.Design.BottomSheetDialog">

        <include
            android:id="@+id/llParticipantsBottomSheetBehaviorId"
            layout="@layout/custom_bottom_sheet_trip_participants" />

        <include
            android:id="@+id/llBottomSheetBehaviorId"
            layout="@layout/custom_bottom_sheet_more_detail" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>